- 01-30-04: Added OnInits to flags so that you don't have to click on them to get the emblem loaded. [Colus]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1772 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,8 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.002
 ----------------------------------------------------------------------------------------------------
+- GvG\payg_cas01.txt - Added OnInits to flags for emblem display w/o activating (rest to come). [Colus]
+- GvG\npc_gflag.txt - Added OnInits to flags for emblem display w/o activating. [Colus]
 - Warp/towns\Niflheim.txt - Fixed erronous warps. [mudvayne]
 - Event\Event_MobTim.txt - Finished translating Tammy. [Tsusai]
 - Event\Event_MobTim.txt - Finished translating Shogo. [Tsusai]
