- Event\Event_MrSmile.txt - Finished officialise script. [mudvayne]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1785 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -5,7 +5,13 @@
 ----------------------------------------------------------------------------------------------------
  Scripts Change Logs
 ====================================================================================================
- 
+
+----------------------------------------------------------------------------------------------------
+ Fusion NPC Pack - 1.003
+----------------------------------------------------------------------------------------------------
+- Event\Event_MrSmile.txt - Finished officialise script. [mudvayne]
+
+
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.002
 ----------------------------------------------------------------------------------------------------
