- Event\Event_Making.txt - Fixed Phantom of Opera requirements. [mudvayne]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1791 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.003
 ----------------------------------------------------------------------------------------------------
+- Event\Event_Making.txt - Fixed Phantom of Opera requirements. [mudvayne]
 - Job\Job1_Thief.txt - Added theif quest. [Storm_Queenie]
 - Job\Job1_Swordman.txt - Added swordmen quest. [Storm_Queenie]
 - Job\Job1_Magician.txt - Added magician quest. [Storm_Queenie]
