--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -8,7 +8,8 @@
 
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.003
-----------------------------------------------------------------------------------------------------
+----------------------------------------------------------------------------------------------------\
+- Event\Event_Making.txt - Fixed Bao Bao requirements. [mudvayne]
 - Event\Event_Making.txt - Fixed Phantom of Opera requirements. [mudvayne]
 - Job\Job1_Thief.txt - Added theif quest. [Storm_Queenie]
 - Job\Job1_Swordman.txt - Added swordmen quest. [Storm_Queenie]
