- NPC\\npc_skill_get.txt - Translated the rest of the platinum skills except Berserk. [Tsusai]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1794 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -8,7 +8,8 @@
 
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.003
-----------------------------------------------------------------------------------------------------\
+----------------------------------------------------------------------------------------------------
+- NPC\npc_skill_get.txt - Translated the rest of the platinum skills except Berserk. [Tsusai]
 - Event\Event_Making.txt - Fixed Bao Bao requirements. [mudvayne]
 - Event\Event_Making.txt - Fixed Phantom of Opera requirements. [mudvayne]
 - Job\Job1_Thief.txt - Added theif quest. [Storm_Queenie]
