- NPC\\npc_skill_get.txt - Updated item descriptions for the thief and auto-berserk. [Tsusai]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1795 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.003
 ----------------------------------------------------------------------------------------------------
+- NPC\npc_skill_get.txt - Updated item descriptions for the thief and auto-berserk. [Tsusai]
 - NPC\npc_skill_get.txt - Translated the rest of the platinum skills except Berserk. [Tsusai]
 - Event\Event_Making.txt - Fixed Bao Bao requirements. [mudvayne]
 - Event\Event_Making.txt - Fixed Phantom of Opera requirements. [mudvayne]
