- Town\\Town_Siglude.txt - Corrected 1% increase. [Tsusai]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1804 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,8 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.003
 ----------------------------------------------------------------------------------------------------
+- Town\Town_Siglude.txt - Corrected 1% increase. [Tsusai]
+- Town\Town_Kafra.txt - Added Coal Mine Dungeon Kafra. [Tsusai]
 - Town\Town_Siglude.txt - Added 1% increase of refine success per level of Weapon Research for Blacksmiths. [Tsusai]
 - Town\Town_Kafra.txt - Disabled Kafra saving in Abandoned Mine Dungeon, Orc Dungeon, Pyramid Dungeon, Sunken Ship, Byalan, and Archer Town. [Tsusai]
 - Town\Town_Prontera.txt - Added Tono, YuPi, YuNa, Bartender, Shevild, TenSue & Marvin. [Tsusai]
