--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.003
 ----------------------------------------------------------------------------------------------------
+- Town\Town_Kafra.txt - Updated remaining warp destinations and prices. [Tsusai]
 - Town\Town_Siglude.txt - Corrected 1% increase. [Tsusai]
 - Town\Town_Kafra.txt - Added Coal Mine Dungeon Kafra. [Tsusai]
 - Town\Town_Siglude.txt - Added 1% increase of refine success per level of Weapon Research for Blacksmiths. [Tsusai]
