*** empty log message ***
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1809 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -36,6 +36,8 @@
 - Event\Event_Rental.txt - Finished officialise script. [mudvayne]
 - Event\Event_MrSmile.txt - Finished officialise script. [mudvayne]
 - Town\Town_Siglude.txt - Fixed missing label. [icbob]
+- Shop\niflhiem.txt - Added Weapon Merchant. [icbob]
+- Shop\niflhiem.txt - Added Armer Merchant. [icbob]
 
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.002
