- Event\\Event_Bunny.txt - Copied to Archive
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1810 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.003
 ----------------------------------------------------------------------------------------------------
+- Event\Event_Bunny.txt - Copied to Archive
 - Town\Town_Kafra.txt - Corrected Errors [Tsusai]
 - Town\Town_Kafra.txt - Updated remaining warp destinations and prices. [Tsusai]
 - Town\Town_Siglude.txt - Corrected 1% increase. [Tsusai]
