--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,8 +9,9 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.003
 ----------------------------------------------------------------------------------------------------
-- Event\Event_Bunny.txt - Copied to Archive
-- Town\Town_Kafra.txt - Corrected Errors [Tsusai]
+- Event\Event_Bunny.txt - Now only shows up in Alberta. [Tsusai]
+- Event\Event_Bunny.txt - Copied to Archive. [Tsusai]
+- Town\Town_Kafra.txt - Corrected Errors. [Tsusai]
 - Town\Town_Kafra.txt - Updated remaining warp destinations and prices. [Tsusai]
 - Town\Town_Siglude.txt - Corrected 1% increase. [Tsusai]
 - Town\Town_Kafra.txt - Added Coal Mine Dungeon Kafra. [Tsusai]
