- Warp\\other\\force_map.txt - Updated mapname of moved warp. [Tsusai]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1817 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.003
 ----------------------------------------------------------------------------------------------------
+- Warp\other\force_map.txt - Updated mapname of moved warp. [Tsusai]
 - Warp\other\Arena_Test.txt - Moved one warp to Warp\other\force_map.txt [Tsusai]
 - GvG\npc_gflag.txt - Finished Emblem/Text support for all town flags and corrected typos. [Tsusai]
 - GvG\npc_gflag.txt - Added Payon Emblem Flag Support and Missing Flags. [Tsusai]
