--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.003
 ----------------------------------------------------------------------------------------------------
+- GvG\aldeg_cas0#.txt - Added Aldebaran Emblem Flag Support. [icbob]
 - Warp\other\valkyrie.txt - Created txt of warps. [Tsusai]
 - Warp\other\force_map.txt - Updated mapname of moved warp. [Tsusai]
 - Warp\other\Arena_Test.txt - Moved one warp to Warp\other\force_map.txt [Tsusai]
