*** empty log message ***
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1820 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.003
 ----------------------------------------------------------------------------------------------------
+- GvG\gefg_cas0#.txt - Added Geffen Emblem Flag Support. [icbob]
 - GvG\aldeg_cas0#.txt - Added Aldebaran Emblem Flag Support. [icbob]
 - Warp\other\valkyrie.txt - Created txt of warps. [Tsusai]
 - Warp\other\force_map.txt - Updated mapname of moved warp. [Tsusai]
