- Warp\\towns\\aldebaran.txt - Removed Alchemist warps. [Tsusai]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1822 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.003
 ----------------------------------------------------------------------------------------------------
+- Warp\towns\aldebaran.txt - Removed Alchemist warps. [Tsusai]
 - Job\Job2_Crusader.txt - Added Grand Peko Breeder. [icbob]
 - Job\Job2_Knight.txt - Fixed Pecopeco Breeder miss spelled label. [icbob]
 - GvG\gefg_cas0#.txt - Added Geffen Emblem Flag Support. [icbob]
