- Warp\\other\\alde_alche.txt - Found correct warp portals and added them to a new txt. [Tsusai]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1823 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.003
 ----------------------------------------------------------------------------------------------------
+- Warp\other\alde_alche.txt - Found correct warp portals and added them to a new txt. [Tsusai]
 - Warp\towns\aldebaran.txt - Removed Alchemist warps. [Tsusai]
 - Job\Job2_Crusader.txt - Added Grand Peko Breeder. [icbob]
 - Job\Job2_Knight.txt - Fixed Pecopeco Breeder miss spelled label. [icbob]
