- Warp\\other\\in_duncer.txt - Added Dancer guild warps. [Tsusai]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1826 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.003
 ----------------------------------------------------------------------------------------------------
+- Warp\other\in_duncer.txt - Added Dancer guild warps. [Tsusai]
 - Job\Job2_Crusader.txt - Added First half of Crusader quest by  KyuubiKitsune. [icbob]
 - Warp\other\alde_alche.txt - Found correct warp portals and added them to a new txt. [Tsusai]
 - Warp\towns\aldebaran.txt - Removed Alchemist warps. [Tsusai]
