--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.003
 ----------------------------------------------------------------------------------------------------
+- Town\Town_Kafra.txt - Fixed Storage check typo. [Tsusai]
 - NPC\npc_skill_get.txt - Converted to english some assassin quests texts. [Tsusai]
 - Town\Town_Kafra.txt - Fixed Storage check. [Tsusai]
 - Warp\other\in_rogue.txt - Added Rogue guild warps. [Tsusai]
