- NPC\\npc_skill_get.txt - Finalized the novice skill quests, replaced variable w/ quest item. [Tsusai]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1831 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.003
 ----------------------------------------------------------------------------------------------------
+- NPC\npc_skill_get.txt - Finalized the novice skill quests, replaced variable w/ quest item. [Tsusai]
 - NPC\npc_skill_get.txt - Fixed/Added Novice Skill Quests. [Tsusai]
 - Town\Town_Kafra.txt - Fixed Storage check typo. [Tsusai]
 - NPC\npc_skill_get.txt - Converted to english some assassin quests texts. [Tsusai]
