--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.003
 ----------------------------------------------------------------------------------------------------
+- GvG\*_cas0*.txt - Updated Kafra Services storage check. [Tsusai]
 - NPC\npc_skill_get.txt - Finalized the novice skill quests, replaced variable w/ quest item. [Tsusai]
 - NPC\npc_skill_get.txt - Fixed/Added Novice Skill Quests. [Tsusai]
 - Town\Town_Kafra.txt - Fixed Storage check typo. [Tsusai]
