--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.003
 ----------------------------------------------------------------------------------------------------
+- GvG\gefg_cas01 - 03.txt - Fixes missing Guardian bug and Kafra service bug [icbob]
 - GvG\aldeg_cas0#.txt - Fixes missing Guardian bug and Kafra service bug in all Aldebaran Guild castles [icbob]
 - GvG\npc_guardiankafra.txt - Fixes missing Guardian bug and Kafra service at prtg_cas01. [Tsusai]
 - GvG\*_cas0*.txt - Updated Kafra Services storage check. [Tsusai]
