- Warp\\other\\sword.txt - Removed - Map no longer used. [Tsusai]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1844 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.003
 ----------------------------------------------------------------------------------------------------
+- Warp\other\sword.txt - Removed - Map no longer used. [Tsusai]
 - GvG\npc_guardiankafra.txt - Added Payon Castle fixes. [Tsusai]
 - shop\geffen.txt - Updated Geffen shop added items updated prices. [Muad_Dib]
 - shop\izlude.txt - Updated Izlude shop added items updated prices. [Muad_Dib]
