- Mob\\other\\job_quests.txt - Updated monsters in the job_sword map. [Tsusai]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1847 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.003
 ----------------------------------------------------------------------------------------------------
+- Mob\other\job_quests.txt - Updated monsters in the job_sword map. [Tsusai]
 - Warp\other\job_sword.txt - Added warps to get out of fallen area caused by traps. [Tsusai]
 - Warp\other\job_sword.txt - Added hidden trap warps. [Tsusai]
 - Warp\other\sword.txt - Removed - Map no longer used. [Tsusai]
