*** empty log message ***
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1852 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.003
 ----------------------------------------------------------------------------------------------------
+- event\Event_Dye.txt replaced Zabadorihan NPC with Owl,s Java Dullihan NPC. [Muad_Dib
 - shop\amatsu.txt - Updated Amatsu shops added items updated prices. [Muad_Dib]
 - shop\lutie.txt - Updated Lutie shops added items updated prices. [Muad_Dib]
 - shop\umbala.txt - Updated Umbala shops added items updated prices. [Muad_Dib]
