--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,9 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.003
 ----------------------------------------------------------------------------------------------------
+- Job\Job2_Blacksmith.txt - Complete change to blacksmith quest. [nestor_zulueta] 
+- Town\Town_Kafra.txt - Added item quest for merchant quest. [nestor_zulueta] 
+- Job\Job1_Merchant.txt - Complete change to merchant quest. [nestor_zulueta] 
 - GvG\npc_guardiankafra.txt - Fixed Geffen Castle Guardian and Kafra service bug. [icbob]
 - event\Event_Dye.txt replaced Zabadorihan NPC with Owl,s Java Dullihan NPC. [Muad_Dib]
 - shop\amatsu.txt - Updated Amatsu shops added items updated prices. [Muad_Dib]
